fix: UC-2655 changed z-index for block__video-tooltip:hover

--- a/src/Compent.uIntra/App_Plugins/Panels/ContentPanel/contentPanel.css
+++ b/src/Compent.uIntra/App_Plugins/Panels/ContentPanel/contentPanel.css
@@ -413,6 +413,7 @@
 
             .block__video:hover &{
                 opacity:1;
+                z-index:9;  
             }
 
             ._active &{
